--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,11 @@
   src: local('PatrickHand'), url(./fonts/PatrickHand-Regular.ttf) format('truetype');
 }
 
+@font-face {
+  font-family: RobotoCondensed;
+  src: local('RobotoCondensed'), url(./fonts/RobotoCondensed-Regular.ttf) format('truetype');
+}
+
 .bigProofTitle {
   font-family: BebasNueve;
   font-size: 25px;
@@ -35,7 +40,40 @@
   font-family: PatrickHand;
 }
 
-.am-accordion-header {
+.listButton {
+  width: 100%;
+  height: auto;
+  min-height: 44px;
+  white-space: normal;
+  line-height: 1.2;
+  text-align: start;
+  font-family: BebasNueve;
+  padding-right: 15px;
+  padding-left: 15px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
+.modalTitle {
+  color: black;
+  font-family: RobotoCondensed;
+  line-height: 1.1;
+
+}
+
+.modalEntry {
+  font-size: 13px;
+  text-align: left;
+  padding-bottom: 4px;
+}
+
+.centerLeft {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
+
+/* .am-accordion-header {
   height: auto !important;
   min-height: 44px;
-}
+} */
